# g35d

./: CMakeLists.txt  README  g35config.c  g35config.h  g35d.c  g35d.h  g35d.rc  index.html  params.json
manpages/: g35d.1  g35d.rc.5
